--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheels" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
     <div class="top-content">
         <div class="header">
-            <div class="header-logo">LOGO</div>
-            <ul class="header-links">
+            <div class="header-logo">NeuraHealth</div>
+            <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
 
-        <div class="title">This Website Is Awesome</div>
+        <div class="title">This Website Is Awesome!</div>
         <div class="subtext-one">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum ipsa veritatis ratione similique pariatur.</div>
         
         <div class="top-button">
@@ -35,18 +36,14 @@
         </div>
 
         <div class="boxes">
-            <div class="box">
-                <div class="text">This is some subtext under an image or illustration.</div>
-            </div>
-            <div class="box">
-                <div class="text">This is some subtext under an image or illustration.</div>
-            </div>
-            <div class="box">
-                <div class="text">This is some subtext under an image or illustration.</div>
-            </div>
-            <div class="box">
-                <div class="text">This is some subtext under an image or illustration.</div>
-            </div>
+            <div class="box"></div>
+            <div class="text">This is some subtext under an image or illustration.</div>
+            <div class="box"></div>
+            <div class="text">This is some subtext under an image or illustration.</div>
+            <div class="box"></div>
+            <div class="text">This is some subtext under an image or illustration.</div>
+            <div class="box"></div>
+            <div class="text">This is some subtext under an image or illustration.</div>
         </div>
     </div>
 
@@ -57,8 +54,8 @@
         <div class="quote-Of">-Thor, God of Thunder</div>
     </div>
 
-    <div class="sign-up-popuop">
-        <div class="title">Call to action! it's Time!</div>
+    <div class="sign-up-popup">
+        <div class="title-two">Call to action! it's Time!</div>
         <div class="text">Sign up for our product by clicking that button right over there!</div>
         <div class="bottom-button">
             <button>Sign Up</button>
@@ -66,7 +63,7 @@
     </div>
 
     <div class="footer">
-        Copyright @ The Odin Project 2021
+        Copyright @ TheChosen-1 2025
     </div>
 
 </body>
