Final adjustments made to both index and styles files, landing page complete.

--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
     <div class="top-content">
         <div class="header">
             <div class="header-logo">NeuraHealth</div>
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+            <ul class="header-links">
+                <li><a href="#">link-one</a></li>
+                <li><a href="#">link-two</a></li>
+                <li><a href="#">link-three</a></li>
             </ul>
         </div>
 
-        <div class="title">This Website Is Awesome!</div>
-        <div class="subtext-one">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum ipsa veritatis ratione similique pariatur.</div>
-        
-        <div class="top-button">
-            <button>Sign Up</button>
-        </div>
+        <div class="top-section">
+            <div class="all-text">
+                <div class="title">This Website Is Awesome!</div>
+                <div class="subtext-one">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum ipsa veritatis ratione similique pariatur.</div>
+                
+                <div class="top-button">
+                    <button>Sign Up</button>
+                </div>
+            </div>
 
-        <div class="top-image">
-            <img src="https//:placehold.co/100x200">
+            <div class="top-image">
+                <img src="bloodCells.jpg">
+            </div>
         </div>
     </div>
 
@@ -36,14 +40,22 @@
         </div>
 
         <div class="boxes">
-            <div class="box"></div>
-            <div class="text">This is some subtext under an image or illustration.</div>
-            <div class="box"></div>
-            <div class="text">This is some subtext under an image or illustration.</div>
-            <div class="box"></div>
-            <div class="text">This is some subtext under an image or illustration.</div>
-            <div class="box"></div>
-            <div class="text">This is some subtext under an image or illustration.</div>
+            <div class="box1">
+                <div class="box"></div>
+                <div class="text">This is some subtext under an image or illustration.</div>
+            </div>
+            <div class="box2">
+                <div class="box"></div>
+                <div class="text">This is some subtext under an image or illustration.</div>
+            </div>
+            <div class="box3">
+                <div class="box"></div>
+                <div class="text">This is some subtext under an image or illustration.</div>
+            </div>
+            <div class="box4">
+                <div class="box"></div>
+                <div class="text">This is some subtext under an image or illustration.</div>
+            </div>
         </div>
     </div>
 
@@ -51,12 +63,14 @@
         <div class="quotation">This is an inspiring quote, or a testimonial from a customer. 
             Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
             is that it looks nice.</div>
-        <div class="quote-Of">-Thor, God of Thunder</div>
+        <div class="quote-Of">-Me ;)</div>
     </div>
 
     <div class="sign-up-popup">
-        <div class="title-two">Call to action! it's Time!</div>
-        <div class="text">Sign up for our product by clicking that button right over there!</div>
+        <div class="popup-text">
+            <div class="title-two">Call to action! It's Time!</div>
+            <div class="text-two">Sign up for our product by clicking that button right over there!</div>
+        </div>
         <div class="bottom-button">
             <button>Sign Up</button>
         </div>
